--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <app-root>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="/__/firebase/7.6.1/firebase-app.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
@@ -19,6 +19,7 @@
 
 <!-- Initialize Firebase -->
 <script src="/__/firebase/init.js"></script>
+  </app-root>
 
 </body>
 </html>
